<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Crunch That</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_food_menu">FoodMenuActivity</string>
    <string name="tvmenu">Cuisine</string>
    <string name="btnindian">Indian</string>
    <string name="btnchinese">Chinese</string>
    <string name="btnitalian">Italian</string>
    <string name="btncoke">Coke</string>
    <string name="title_activity_indian_food">IndianFoodActivity</string>
    <string name="title_activity_chinese">ChineseActivity</string>
    <string name="title_activity_italian">ItalianActivity</string>
    <string name="title_activity_coke">CokeActivity</string>
    <string name="tvifood">Indian Food</string>
    <string name="btnnorth">North Indian</string>
    <string name="btnsouth">South Indian</string>
    <string name="btneast">East Indian</string>
    <string name="btnwest">West Indian</string>
    <string name="btniveg">Veg</string>
    <string name="btninveg">Non Veg</string>
    <string name="title_activity_indian_veg">IndianVegActivity</string>
    <string name="title_activity_indian_non_veg">IndianNonVegActivity</string>
    <string name="cbroti">PlainRoti                                  Rs 10</string>
    <string name="tv">Veg</string>
    <string name="btn1">Plain Roti</string>
    <string name="tvt1">Rs 10</string>
    <string name="btn2">Fry Rice</string>
    <string name="tvt2">Rs 50</string>
    <string name="cbbiryani">Veg Biryani</string>
    <string name="tvt3">Rs 80</string>
    <string name="cb1">Paneer Butter Masala</string>
    <string name="tvt4">Rs 120</string>
    <string name="cb2">Shahi Paneer</string>
    <string name="tvt6">Rs 130</string>
    <string name="cb3">Mix Vegetable</string>
    <string name="tvt7">Rs 80</string>
    <string name="cb5">Dam Aaloo</string>
    <string name="tv7">Rs 100</string>
    <string name="cb7">Dal Fry</string>
    <string name="tvt8">Rs 80</string>
    <string name="cbdal">Plain Dal</string>
    <string name="tvt9">Rs 90</string>
    <string name="cbsalad">Salad</string>
    <string name="tvt10">Rs 20</string>
    <string name="btn11">Add More</string>
    <string name="btn12">Order</string>
    <string name="tvti">Non Veg</string>
    <string name="cb11">Butter Chicken</string>
    <string name="tvt11">Rs 200</string>
    <string name="cbchic">Kadhai Chicken</string>
    <string name="tvt12">Rs 190</string>
    <string name="cbchicken">Chicken Curry</string>
    <string name="tvt13">Rs 200</string>
    <string name="cbckorma">Chicken Korma</string>
    <string name="tvt15">Rs 200</string>
    <string name="cbegg">Egg Curry</string>
    <string name="tvt16">Rs 90</string>
    <string name="cbegg2">Egg Masala</string>
    <string name="tvt21">Egg Masala</string>
    <string name="tvt22">Rs 100</string>
    <string name="cbeggbhurji">Egg Bhurji</string>
    <string name="tvt14">Rs 70</string>
    <string name="cbbi">Chicken Biryani</string>
    <string name="tvt31">Rs 200</string>
    <string name="cbchili">Chilli Chicken</string>
    <string name="tvt33">Rs 200</string>
    <string name="cbgarlic">Garlic Chicken</string>
    <string name="tvt27">Rs 200</string>
    <string name="btn13">Add More</string>
    <string name="btn25">Order</string>
    <string name="tvtitl">Chinese Food</string>
    <string name="btncveg">Veg</string>
    <string name="btncnveg">Non Veg</string>
    <string name="title_activity_chinese_veg">ChineseVegActivity</string>
    <string name="title_activity_chinese_non_veg">ChineseNonVegActivity</string>
    <string name="tvtt">Veg</string>
    <string name="cbct">Chilly Tikka</string>
    <string name="tvct">Rs 150</string>
    <string name="cblt">Lemon Tikka</string>
    <string name="tvlt">Rs 150</string>
    <string name="cbctb">Chilly Tikka Beijing</string>
    <string name="tvtti">Rs 150</string>
    <string name="cbtm">Tikka Manchurian</string>
    <string name="tvtf">Rs 150</string>
    <string name="tvtwo">Rs 120</string>
    <string name="cbhp">Honey Potato</string>
    <string name="cbsr">Spring Roll</string>
    <string name="cbvc">Veg Crispy</string>
    <string name="cbvhn">Veg Hakka Noodles</string>
    <string name="cbscn">Soya Chaap Noodles</string>
    <string name="cbcc">Chinese Choupsey</string>
    <string name="tvot">Rs 110</string>
    <string name="btnam">Add More</string>
    <string name="btno">Order</string>
    <string name="tvt">Non Veg</string>
    <string name="cbcs">Chicken 65</string>
    <string name="cbcl">Chicken Lolly Pop</string>
    <string name="cbccr">Chicken Cripsy</string>
    <string name="cbfc">Fish Chilly</string>
    <string name="cbff">Fish Finger</string>
    <string name="cbcs1">Crab Schezwan</string>
    <string name="cbchp">Crab Hot Pen</string>
    <string name="cbcsr">ChickenSpring Roll</string>
    <string name="cbrl">Roasted Lamb</string>
    <string name="cbcct">Chicken China Town</string>
    <string name="tvtff">Rs 250</string>
    <string name="tvth">Rs 300</string>
    <string name="btndrink">Coke</string>
    <string name="tvttt">Coke</string>
    <string name="cbfanta">Fanta</string>
    <string name="tvtttt">Rs 40</string>
    <string name="cbpepsi">Pepsi</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="btn111">Sign In</string>
    <string name="btn112">Sign Up</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="tvtiii">LOGIN</string>
    <string name="btn">Sign In</string>
    <string name="btnw">Sign Up</string>
    <string name="tvtit">Sign Up</string>
    <string name="hun">User Name</string>
    <string name="hp">Password</string>
    <string name="hn">Name</string>
    <string name="hc">Contact</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="tvbill">BILL</string>

</resources>
